# weather_app

./: .gitignore  .pi-config  API_CONNECTION_FIX.md  CICD_QUICK_START.md  CI_CD_SETUP.md  DEPLOYMENT.md  DEVELOPMENT.md  FRONTEND_SETUP.md  GETTING_STARTED.md  GITHUB_RUNNER_SETUP.md  PI_FRONTEND_SETUP.md  QUICK_START_DEV.md  RASPBERRY_PI_SETUP.md  README.md  check-status.sh  setup-frontend.sh  start-dev.sh  upload.py  watch-deployment.sh  weather.py  weatherstream.py
backend/: backfill_silver.py  generate_mock_data.py  list_s3_objects.py  pyproject.toml  test_s3_upload.py  upload_mock_data_to_s3.py
backend/mock_data/: 2025-10-06T05-31-00.605927Z.json  2025-10-06T06-31-00.605927Z.json  2025-10-06T07-31-00.605927Z.json  2025-10-06T08-31-00.605927Z.json  2025-10-06T09-31-00.605927Z.json  2025-10-06T10-31-00.605927Z.json  2025-10-06T11-31-00.605927Z.json  2025-10-06T12-31-00.605927Z.json  2025-10-06T13-31-00.605927Z.json  2025-10-06T14-31-00.605927Z.json  2025-10-06T15-31-00.605927Z.json  2025-10-06T16-31-00.605927Z.json  2025-10-06T17-31-00.605927Z.json  2025-10-06T18-31-00.605927Z.json  2025-10-06T19-31-00.605927Z.json  2025-10-06T20-31-00.605927Z.json  2025-10-06T21-31-00.605927Z.json  2025-10-06T22-31-00.605927Z.json  2025-10-06T23-31-00.605927Z.json  2025-10-07T00-31-00.605927Z.json  2025-10-07T01-31-00.605927Z.json  2025-10-07T02-31-00.605927Z.json  2025-10-07T03-31-00.605927Z.json  2025-10-07T04-31-00.605927Z.json
backend/src/weather/: api.py  calculations.py  collector.py  hat.py  s3.py  settings.py
deploy/: configure-runner.sh  enableservice.sh  rsync_deploy.sh  (+12 more)
(+58 files in other folders)
