[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kevins-weather-backend"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "fastapi",
  "uvicorn[standard]",
  "boto3",
  "sense-emu>=1.2.1",
  "python-dotenv",
]

[tool.hatch.build.targets.wheel]
packages = ["src/weather"]

[tool.uv]
package = true 
